--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
 
 html,
 body {
@@ -16,15 +16,36 @@ a {
   color: inherit;
   text-decoration: none;
 }
-h2{
-  font-family: 'Alfa Slab One', cursive;
-
+h2 {
+  font-family: "Alfa Slab One", cursive;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.active{
+.active {
   font-weight: bold;
+}
+
+.imgContainer div{
+  position: unset;
+}
+Image {
+  object-fit: contain;
+  width: 100% ;
+  position: relative !;
+  height: unset ;
+}
+.aboutCard{
+  width: fit-content;
+  height: auto;
+  background-color: #ef4444;
+  display: flex;
+  flex-direction: column ;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  margin: 0 .5rem;
+  color: white;
 }
